src/objects/c2g__codaCheckNumber__c.object
<CustomObject>
    <customHelpPage>c2g__codahelpchecknumber</customHelpPage>
    <description>Records the details and status of numbered checks in the associated check range.</description>
    <fields>
        <fullName>c2g__Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Check Numbers</relationshipLabel>
        <relationshipName>CheckNumbers</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>c2g__CheckNumber__c</fullName>
        <label>Check Number</label>
        <length>6</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>c2g__CheckRange__c</fullName>
        <label>Check Range</label>
        <referenceTo>c2g__codaCheckRange__c</referenceTo>
        <relationshipLabel>Check Numbers</relationshipLabel>
        <relationshipName>CheckNumbers</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>c2g__ExternalId__c</fullName>
        <externalId>true</externalId>
        <label>External Id</label>
        <length>32</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>c2g__LockToken__c</fullName>
        <label>LockToken</label>
        <length>50</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>c2g__PaymentValue__c</fullName>
        <label>Payment Value</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>c2g__Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Valid</fullName>
                    <default>true</default>
                    <label>Valid</label>
                </value>
                <value>
                    <fullName>Void</fullName>
                </value>
                <value>
                    <fullName>Cash Entry</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>c2g__UnitofWork__c</fullName>
        <label>Unit of Work</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Check Number</label>
    <listViews>
        <fullName>c2g__All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>{000000}</displayFormat>
        <label>Check Number ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Check Numbers</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>